--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        
         <div class="left-section">
             <div class="profile-image">
-                <img src="C:\Users\lovew\Downloads\a43f4331-cabb-4a61-9abe-ad88759c0367.jpg" alt="Profile Image">
+                <img src="a43f4331-cabb-4a61-9abe-ad88759c0367.jpg" alt="Profile Image">
             </div>
             <div class="section-title">About Me</div>
             <p>ผมเป็นนิสิตสาขาวิทยาการคอมพิวเตอร์ที่มีความหลงใหลในการพัฒนาเทคโนโลยีและการแก้ไขปัญหาทางคอมพิวเตอร์อย่างมีประสิทธิภาพ โดยมุ่งมั่นในการใช้ทักษะการเขียนโปรแกรมและการออกแบบระบบในการพัฒนาแอปพลิเคชันที่ใช้งานง่ายและตอบสนองความต้องการของผู้ใช้ได้อย่างแม่นยำ ผ่านประสบการณ์การทำโปรเจกต์ต่างๆ ทั้งในมหาวิทยาลัยและการฝึกงานที่มุ่งเน้นการทำงานร่วมกับทีมและการพัฒนาซอฟต์แวร์ในสภาพแวดล้อมที่มีความท้าทาย</p>
