--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>ออกแบบและสร้างฐานข้อมูลสำหรับระบบ Smart Billboard โดยได้ออกแบบตารางข้อมูลสำหรับเก็บข้อมูลผู้ชม (เช่น อายุ เพศ และอารมณ์), โฆษณา (ประเภทเนื้อหาและกลุ่มเป้าหมาย), เซ็นเซอร์ (ข้อมูลการตรวจจับภาพและการเคลื่อนไหว), และการบันทึกการทำงานของ AI (การปรับเนื้อหาโฆษณาแบบเรียลไทม์) พร้อมทั้งออกแบบความสัมพันธ์ระหว่างตารางและรองรับการประมวลผลข้อมูลแบบเรียลไทม์เพื่อการปรับโฆษณาที่เหมาะสมกับผู้ชมทุกคน</p>
             </div>
             <div class="experience-item">
-                <h3>สร้าง ระบบซื้อขายงาน <span>2565</span></h3>
+                <h3>สร้าง ระบบซื้อขายจาน <span>2565</span></h3>
                 <p>ได้พัฒนาระบบซื้อขายจานด้วยภาษา Python โดยสร้างฟังก์ชันการทำงานต่าง ๆ เช่น การเพิ่มและจัดการสินค้าจานอาหารในร้าน, การซื้อและขายจานพร้อมปรับสต็อกสินค้าอัตโนมัติ, การคำนวณราคาสินค้า, รวมถึงการบันทึกประวัติการซื้อขายทั้งหมดในระบบ ซึ่งสามารถแสดงข้อมูลสต็อกสินค้าและประวัติการทำธุรกรรมได้แบบเรียลไทม์</p>
             </div>
             <div class="experience-item">
